# GeoTaichi

./: .gitignore  README.md  geotaichi_env.yml  pyproject.toml  requirements.sh  setup.py
example/mpm/Footing/: StripFootingTresca.py
examples/CPT2D/: Pile2DAxisyMCC.py  Pile2DAxisyMCC_yc1.py  pileMCC.txt
examples/ElementTest/: DrainedMCC.py  DrainedNorSand.py  UndrainedMCC.py  UndrainedNorSand.py  plot_tx_results.py
examples/ElementTest/DrainedMCC/: draw.py  tablelegend.py
examples/ElementTest/DrainedNorSand/: draw.py
examples/ElementTest/UndrainedMCC/: draw.py
geotaichi/: __init__.py
src/dem/contact/: ContactModelBase.py
src/iga/: BaseKernel.py  BaseStruct.py  IGABase.py  MaterialManager.py  Recorder.py  SceneManager.py  Simulation.py  mainIGA.py
src/iga/element/: HexahedronElement.py  HexahedronKernel.py
src/iga/engine/: Engine.py  (+3 more)
src/levelset/: BoundaryConditions.py  FastMarchingLevelSet.py  FastSweepingLevelSet.py  FiniteDifference.py  FluidSurface.py  GeometryMethod.py  HighOrderInterpolation.py  LevelSet.py  SemiLagrangian.py  WENO.py  WENOFlux.py
src/mpm/: Contact.py  MaterialManager.py  Recorder.py  SceneManager.py  mainMPM.py
src/nurbs/: BSplinePrimitives.py  BasicVolume.py  Distance.py  Energy.py  Fitting.py  Geomtry.py  Kmean.py  Nurbs.py  NurbsBasis.py  NurbsPlot.py  NurbsPrimitives.py  Operations.py  Optimization.py  OptimizerVisualize.py  SplinePrimitives.py  Utilities.py  __init__.py
src/optimizer/: AugmentNewton.py  Newton.py
src/sdf/: BasicShape.py  mesh.py
taichi_demo/: demo_fluid.py  demo_fvm.py  demo_mpm_graph.py  pic.py
(+43 files in other folders)
